# clangd-test

./: .gitignore  flake.nix  justfile
flake/: outputs.nix
src/: meson.build
